--- a/client/src/components/header/rightheader.css
+++ b/client/src/components/header/rightheader.css
@@ -18,13 +18,13 @@
     color: #fff;
 }
 
-.rightheader .avtar{
+.rightheader .avatar{
     cursor: pointer;
     margin-top: 20px;
     margin-left: 10px;
 }
 
-.rightheader .avtar2{
+.rightheader .avatar2{
     cursor: pointer;
     background-color: #1365cf;
     margin-top: 20px;
